-Busca usando índice reverso no mariadb. -Remoção dos StringBuffer e usando o StringBuilder. - Indexação simples usando do Lucene. - Busca simples usando o Lucene